--- a/style.css
+++ b/style.css
@@ -279,7 +279,7 @@
   border: 2px solid blue;
   border-radius: 30px;
   background-color: white;
-  color: blue;
+  color: greenyellow;
   padding: 10px;
 }
 .child2last {
